# money

./: README.md  pyproject.toml
scripts/: bootstrap_ext_models.py
src/: const.py  context.py
src/api/: __init__.py  api.py  dependencies.py  macro.py  router.py  session.py
src/api/core/: __init__.py  command.py  data.py  dependency.py  factory.py  macro.py  orm.py  protocols.py  provider.py  request.py  response.py  router.py  session.py  symbols.py
src/api/core/orm/: __init__.py  common.py  meta.py  mixin.py  raw.py
src/app/: app.py  config.py  daemon.py  process.py  producer.py  schedule.py  server.py
src/app/common/: request_handler.py  schedule.py
src/cli/: helpers.py  meta.py
src/data/api/: __init__.py  api.py  dependencies.py  router.py
src/data/api/core/: __init__.py  data.py  orm.py  protocols.py  symbols.py
src/data/api/core/orm/: __init__.py  meta.py  raw.py
src/data/app/: daemon.py  logger.py  state.py
src/data/db/: commands.py  engine.py  operations.py
src/data/ext/ibkr/: __init__.py  models.py  models_generated.py  routers.py  tables.py
src/data/util/: env.py
src/db/: __init__.py  commands.py  operations.py
src/db/orm/: __init__.py  meta.py  raw.py
src/ext/ibkr/: __init__.py  models.py  models_generated.py  routers.py  tables.py  util.py
src/money/core/: __init__.py  data.py  dependency.py  router.py  source.py  symbols.py
src/money/db/: __init__.py  helpers.py  meta.py
src/money/ext/ibkr/: __init__.py  data.py  routers.py
src/scripts/: bootstrap_ext_models.py
src/tui/: __main__.py  content.py  main.py
src/tui/tabs/: __init__.py  collections.py  common.py  home.py  schedule.py
src/tui/widgets/: table.py
src/util/: __init__.py  config.py  context.py  dt.py  env.py  ident.py  log.py  settings.py
tests/: conftest.py
tests/integration/: test_api_connect.py  test_ibkr_api.py
tests/unit/: test_api_session.py  test_core.py  test_ext_ibkr.py  test_ibkr.py
