[project]
name = "money"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryan-d-young", email = "inbox@ryanyou.ng" }
]
dependencies = [
    "pydantic>=2.10.5",
    "sqlalchemy>=2.0.37",
    "aiohttp>=3.11.11",
    "datamodel-code-generator>=0.26.5",
    "typer>=0.15.1",
    "textual>=1.0.0",
    "asyncpg>=0.30.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/money"]
